--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,30 @@
 [package]
 name = "bevy_simple_preferences"
-version = "0.1.0"
+version = "0.0.1-dev"
 edition = "2021"
 
 [dependencies]
+serde = { version = "1.0" }
+thiserror = "1.0"
+bevy = { version = "0.13", default-features = false }
+
+[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
+toml = "0.8"
+tempfile = "3.10"
+dirs = "5.0"
+
+[target.'cfg(target_arch = "wasm32")'.dependencies]
+gloo-storage = "0.3"
+serde_json = "1.0"
+
+[dev-dependencies]
+bevy = { version = "0.13", default-features = false, features = [
+    "multi-threaded",
+    "bevy_render",
+    "bevy_winit",
+    "webgl2"
+] }
+bevy-inspector-egui = "0.24"
+rand = "0.8"
+serde_test = "1.0"
+serde_assert = "0.7"
