--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,7 +10,7 @@ missing_docs = "warn"
 [dependencies]
 serde = { version = "1.0" }
 thiserror = "1.0"
-bevy = { version = "0.14", default-features = false, features = ["multi_threaded"] }
+bevy = { version = "0.14", default-features = false }
 
 [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
 toml = "0.8"
@@ -23,6 +23,7 @@ serde_json = "1.0"
 
 [dev-dependencies]
 bevy = { version = "0.14", default-features = false, features = [
+    "multi_threaded",
     "bevy_render",
     "bevy_winit",
     "webgl2",
