--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,13 +1,13 @@
 [package]
 name = "bevy_simple_preferences"
-version = "0.1.0"
-edition = "2021"
+version = "0.2.0"
+edition = "2024"
 description = "A simple Preferences API for Bevy"
 license = "MIT OR Apache-2.0"
 categories = ["games", "game-development"]
 keywords = ["preferences", "bevy"]
 repository = "https://github.com/eckz/bevy_simple_preferences"
-rust-version = "1.80.0"
+rust-version = "1.85.0"
 
 [lints.rust]
 unsafe_code = "forbid"
@@ -18,32 +18,37 @@ doc_markdown = "warn"
 
 [dependencies]
 serde = { version = "1.0" }
-thiserror = "1.0"
-bevy = { version = "0.14", default-features = false }
+thiserror = "2.0"
+bevy = { version = "0.15", default-features = false }
 
 [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
 toml = "0.8"
 tempfile = "3.10"
-dirs = "5.0"
+dirs = "6.0"
 
 [target.'cfg(target_arch = "wasm32")'.dependencies]
 gloo-storage = "0.3"
 serde_json = "1.0"
 
 [dev-dependencies]
-bevy = { version = "0.14", default-features = false, features = [
+bevy = { version = "0.15", default-features = false, features = [
     "multi_threaded",
-    "bevy_render",
+    "bevy_asset",
     "bevy_winit",
+    "bevy_picking",
+    "bevy_render",
     "webgl2",
     "x11"
 ] }
-bevy-inspector-egui = { version = "0.25", default-features = false, features = ["bevy_render"] }
-egui = { version = "0.28", features = ["persistence"] }
+bevy-inspector-egui = { version = "0.29", default-features = false, features = ["bevy_render"] }
+egui = { version = "0.30", features = ["persistence"] }
+ron = "0.8"
 serde_json = "1.0"
-rand = "0.8"
+rand = { version = "0.9"}
 serde_test = "1.0"
 serde_assert = "0.8"
 
 [target.'cfg(target_arch = "wasm32")'.dev-dependencies]
 wasm-bindgen-test = "0.3"
+getrandom = { version = "0.3", features = ["wasm_js"] }
+
